Almot done except Python

--- a/Controls/Makefile
+++ b/Controls/Makefile
@@ -1,8 +1,8 @@
-Starter: MotorController.o main.o
-	c99 -o Starter MotorController.o main.o
+MotorController: MotorController.o main.o
+	c99 -o MotorController MotorController.o main.o
 
 MotorController.o: MotorController.c
 	c99 -c MotorController.c
 
-main.o: MotorController.c
-	c99 -c MotorController.c
+main.o: main.c
+	c99 -c main.c
