--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Firmware-Debug/Embedded-Sharepoint"]
 	path = Firmware-Debug/Embedded-Sharepoint
 	url = https://github.com/lhr-solar/Embedded-Sharepoint.git
+[submodule "Embedded-Sharepoint"]
+	path = Embedded-Sharepoint
+	url = https://github.com/lhr-solar/Embedded-Sharepoint.git
